# redGrapes

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  functor.hpp  jamroot  main.cpp  makefile  queue.hpp  redGrapesConfig.cmake  resource.hpp  rmngrConfig.cmake
.github/workflows/: ubuntu.yml
.github/workflows/dependencies/: gcc.sh
docs/: Makefile  doxygen.conf
docs/source/: async.rst  best_practices.rst  cheatsheet.rst  components.rst  conf.py  contributing.rst  debugging.rst  index.rst  install.rst  overview.rst  schedulers.rst
docs/source/extending/: access_types.rst  index.rst  task_properties.rst
docs/source/internal/: memory.rst  races.rst
docs/source/tutorial/: access_demotion.rst  building.rst  dynamic_properties.rst  functors.rst  index.rst  init.rst  properties.rst  refinements.rst  resources.rst  tasks.rst
examples/: #cholesky.cpp#  1_resources.cpp  2_functors.cpp  3_functors_with_resources.cpp  4_refinements.cpp  5_access_demotion.cpp  6_dynamic_properties.cpp  6_resource_scope.cpp  7_event.cpp  7_resource_scope.cpp  7_scheduler_singleton.cpp  CMakeLists.txt  cholesky.cpp  cuda_mandelbrot.cu  example.cpp  game_of_life.cpp  mpi.cpp
examples/config/: redGrapes_config.hpp
redGrapes/: #redGrapes.hpp#  SchedulerDescription.hpp  TaskCtx.hpp  TaskFreeCtx.hpp  context.hpp  cv.hpp  imanager.hpp  manager.hpp  redGrapes.cpp  redGrapes.hpp  redGrapes.tpp  thread_local.hpp  version.hpp
redGrapes/access/: area.hpp  combine.hpp  dependency_manager.hpp  field.hpp  io.hpp
redGrapes/dispatch/: dispatcher.hpp
redGrapes/dispatch/cuda/: event_pool.hpp  scheduler.hpp  task_properties.hpp
redGrapes/dispatch/cupla/: event_pool.hpp  scheduler.hpp  task_properties.hpp
redGrapes/dispatch/mpi/: mpiWorker.hpp  request_pool.hpp  scheduler.hpp
redGrapes/dispatch/thread/: DefaultWorker.hpp  DefaultWorker.tpp  WorkerThread.hpp  cpuset.cpp  cpuset.hpp  execute.cpp  local.hpp  thread_local.hpp  worker.cpp  worker.hpp  worker_pool.cpp  worker_pool.hpp  worker_pool.tpp
redGrapes/graph/: precedence_graph.hpp  recursive_graph.hpp  refined_graph.hpp  scheduling_graph.hpp  util.hpp
redGrapes/helpers/cuda/: event_pool.hpp  scheduler.hpp  stream.hpp  synchronize.hpp
redGrapes/helpers/cupla/: event_pool.hpp  scheduler.hpp
redGrapes/helpers/mpi/: request_pool.hpp  scheduler.hpp
redGrapes/memory/: allocator.cpp  allocator.hpp  block.hpp  bump_allocator.cpp  bump_allocator.hpp  chunked_bump_alloc.hpp  hwloc_alloc.hpp  refcounted.hpp
redGrapes/property/: id.hpp  inherit.hpp  label.hpp  resource.hpp  trait.hpp
redGrapes/resource/: fieldresource.hpp  ioresource.hpp  resource.cpp  resource.hpp  resource_user.cpp  resource_user.hpp  resource_user.tpp
redGrapes/resource/access/: area.hpp  combine.hpp  field.hpp  io.hpp
redGrapes/scheduler/: #fifo.hpp#  #tag_match.hpp#  default_scheduler.cpp  default_scheduler.hpp  event.cpp  event.hpp  event.tpp  event_ptr.cpp  event_ptr.tpp  fifo.hpp  pool_scheduler.hpp  pool_scheduler.tpp  scheduler.hpp  scheduling_graph.cpp  scheduling_graph.hpp  states.hpp  tag_match.hpp  tag_match_property.hpp  thread_scheduler.hpp  worker.hpp
redGrapes/sync/: cv.cpp  cv.hpp  spinlock.hpp
redGrapes/task/: allocator.cpp  allocator.hpp  delayed_functor.hpp  future.hpp  itask.hpp  precedence_graph.hpp  queue.cpp  queue.hpp  task.hpp  task_base.hpp  task_builder.hpp  task_container.hpp  task_result.hpp  task_space.cpp  task_space.hpp  working_future.hpp
redGrapes/task/property/: graph.cpp  graph.hpp  graph.tpp  id.hpp  inherit.hpp  label.hpp  queue.hpp  resource.hpp  trait.hpp
redGrapes/thread/: thread_dispatcher.hpp  thread_local.hpp  thread_schedule.hpp
redGrapes/util/: allocator.cpp  allocator.hpp  atomic_list.hpp  bind_args.hpp  bitfield.hpp  bump_alloc_chunk.cpp  bump_alloc_chunk.hpp  chunk_allocator.cpp  chunk_allocator.hpp  chunked_bump_alloc.hpp  chunked_list.cpp  chunked_list.hpp  chunklist.hpp  cv.hpp  hwloc_alloc.hpp  multi_arena_alloc.hpp  spinlock.hpp  trace.cpp  trace.hpp  trace.tpp  tuple_map.hpp
rmngr/: delayed_functor.hpp~  dependency_graph.hpp  dependency_manager.hpp  dependency_refinement.hpp  fieldresource.hpp  functor.hpp  functor_queue.hpp  graph_util.hpp  ioaccess.hpp  ioresource.hpp  jamfile  manager.hpp  matrix.hpp  observer_ptr.hpp  precedence_graph.hpp  queue.hpp  refined_graph.hpp  refinement.hpp  resource.hpp  resource_user.hpp  scheduler.hpp  scheduling_context.hpp  scheduling_graph.hpp  thread_dispatcher.hpp  thread_schedule.hpp  working_future.hpp
rmngr/access/: area.hpp  combine.hpp  dependency_manager.hpp  field.hpp  io.hpp
rmngr/graph/: precedence_graph.hpp  refined_graph.hpp  scheduling_graph.hpp  util.hpp
rmngr/property/: inherit.hpp  label.hpp  label.hpp~  resource.hpp  resource.hpp~
rmngr/resource/: fieldresource.hpp  ioresource.hpp  resource.hpp  resource_user.hpp
rmngr/scheduler/: #scheduler_interface.hpp#  .#scheduler_interface.hpp  dispatch.hpp  fifo.hpp  graphviz.hpp  main_thread.hpp  resource.hpp  schedulable.hpp  schedulable_functor.hpp  scheduler.hpp  scheduler_interface.hpp  scheduler_singleton.hpp  scheduling_graph.hpp  states.hpp
rmngr/task/: delayed_functor.hpp  task.hpp  task_container.hpp  working_future.hpp
rmngr/thread/: thread_dispatcher.hpp  thread_schedule.hpp
share/: make_cuda_headers.sh  util.sh  visualize_heap.sh
test/: CMakeLists.txt  access.cpp  chunked_list.cpp  cv.cpp  dependency_manager.cpp  dispatcher.cpp  jamfile  main.cpp  matrix.cpp  queue.cpp  random_graph.cpp  resource.cpp  resource_user.cpp  scheduler.cpp  sha256.c  task_space.cpp  thread_dispatcher.cpp
